css of new markedown issue desc page was sized too big

--- a/app/assets/v2/css/base.css
+++ b/app/assets/v2/css/base.css
@@ -696,6 +696,15 @@ body.bounty_details .avatar {
 #bounty_details{
     display: none;
 }
+#bounty_details #issue_description #h1,
+#bounty_details #issue_description #h2,
+#bounty_details #issue_description #h3,
+#bounty_details #issue_description #h4,
+#bounty_details #issue_description #h5,
+#bounty_details #issue_description #h6
+{
+    font-size: 16px;
+}
 
 body.bounty_details #left_actions,
 body.bounty_details #right_actions {
